--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Snack Game</title>
+  <link rel="shortcut icon" href="imagens/icons8-python-icongeek26-linear-colour-32.ico" type="image/x-icon">
   <link rel="stylesheet" href="./style.css">
 
 </head>
