--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 
 </head>
-<body>
+<body onmouseenter="execSom()">
 
 <div class="container noselect">
         <div class="wrapper">
@@ -28,6 +28,11 @@
           <h1>SNAKE GAME</h1>&nbsp;&nbsp;&nbsp;<p>POR</p> <span>SAMUEL CANDIDO</span>
         </div>
       </div>
+
+      
+      <audio style="visibility:hidden" autoplay loop="loop" id='playaudio'>
+        <source src="night-crickets.mp3" type="audio/mp3"/>
+      </audio>
 
   <script  src="./script.js"></script>
 
